src/Pages/Home/Home.css
@media screen and (min-width: 821px) {
  .container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .buttons {
    margin-right: 10px;
    margin-top: 30px;
  }

  .danger {
    background-color: #c21010;
  }
  .details {
    margin-top: 10%;
  }
  .details h1 {
    font-weight: 700;
    width: 450px;
  }
  .heading-color {
    color: #c21010;
  }
  .details p {
    width: 400px;
    padding-top: 20px;
  }
  .image {
    margin-top: 5%;
  }
  .image img {
    margin-left: 250px;
    margin-top: 24%;
  }
}

@media only screen and (max-width: 480px) {
  .image img {
    width: 130px;
    height: 140px;
    margin-bottom: 10%;
    margin-top: 20%;
    margin-left: 30%;
  }
  .details {
    text-align: center;
  }
  .details p {
    width: 100%;
    padding-top: 20px;
  }

  .details h1 {
    font-weight: 700;
    width: 350px;
  }
  .heading-color {
    color: #c21010;
  }
  .buttons {
    margin-top: 20px;
    margin-right: 10px;
  }
}

@media only screen and (min-width: 481px) and (max-device-width: 820px) {
  .image img {
    width: 250px;
    height: 270px;
    margin: auto;
    margin-top: 10%;
  }
  .details {
    margin-top: 10%;
    text-align: center;
  }
  .details p {
    width: 100%;
    padding-top: 20px;
    font-size: 1.5rem;
  }
  .details h1 {
    font-weight: 700;
  }
  .heading-color {
    color: #c21010;
  }
  .buttons {
    padding: 15px 20px;
    font-size: 1.5rem;
    margin-top: 20px;
    margin-right: 15px;
  }
}

